[metadata]
name = apeiron
version = 0.1
description = FIXME
long_description = file: README.md
url = https://github.com/ajinkyapande156/apeiron
keywords = nutanix, apeiron
license = BSD 3-Clause License
classifiers =
    Development Status ::  - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # List your package dependencies here

[options.package_data]
my_package = *.txt, *.md